--- a/asm/69BE.html
+++ b/asm/69BE.html
@@ -46,12 +46,11 @@ Next: <a href="69F2.html">69F2</a>
 <tr>
 <td class="address-2"><span id="69be"></span>69BE</td>
 <td class="instruction">LD DE,$0002</td>
-<td class="comment-1" rowspan="1"><span class="register">DE</span>=0002.</td>
+<td class="comment-1" rowspan="2"><span class="register">HL</span>+=0002.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="69c1"></span>69C1</td>
 <td class="instruction">ADD HL,DE</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>+=<span class="register">DE</span>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="69c2"></span>69C2</td>
