--- a/asm/6A27.html
+++ b/asm/6A27.html
@@ -175,7 +175,7 @@ Used by the routines at <a href="6A00.html">6A00</a> and <a href="6AAC.html">6AA
 <tr>
 <td class="address-1"><span id="6a4c"></span>6A4C</td>
 <td class="instruction">LD L,$33</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=33.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="7833.html">PlayerPosition_Y</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="6a4e"></span>6A4E</td>
@@ -205,7 +205,7 @@ Used by the routines at <a href="6A00.html">6A00</a> and <a href="6AAC.html">6AA
 <tr>
 <td class="address-2"><span id="6a55"></span>6A55</td>
 <td class="instruction">LD L,$26</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=26.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="7826.html">7826</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="6a57"></span>6A57</td>
@@ -283,7 +283,7 @@ Used by the routines at <a href="6A00.html">6A00</a> and <a href="6AAC.html">6AA
 <tr>
 <td class="address-2"><span id="6a6d"></span>6A6D</td>
 <td class="instruction">LD L,$26</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=26.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="7826.html">7826</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="6a6f"></span>6A6F</td>
@@ -301,7 +301,7 @@ Used by the routines at <a href="6A00.html">6A00</a> and <a href="6AAC.html">6AA
 <tr>
 <td class="address-1"><span id="6a73"></span>6A73</td>
 <td class="instruction">LD L,$22</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=22.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="7822.html">Speed</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="6a75"></span>6A75</td>
