--- a/dec/asm/27175.html
+++ b/dec/asm/27175.html
@@ -175,7 +175,7 @@ Used by the routines at <a href="27136.html">27136</a> and <a href="27308.html">
 <tr>
 <td class="address-1"><span id="27212"></span>27212</td>
 <td class="instruction">LD L,51</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=51.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="30771.html">PlayerPosition_Y</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="27214"></span>27214</td>
@@ -205,7 +205,7 @@ Used by the routines at <a href="27136.html">27136</a> and <a href="27308.html">
 <tr>
 <td class="address-2"><span id="27221"></span>27221</td>
 <td class="instruction">LD L,38</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=38.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="30758.html">30758</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="27223"></span>27223</td>
@@ -283,7 +283,7 @@ Used by the routines at <a href="27136.html">27136</a> and <a href="27308.html">
 <tr>
 <td class="address-2"><span id="27245"></span>27245</td>
 <td class="instruction">LD L,38</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=38.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="30758.html">30758</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="27247"></span>27247</td>
@@ -301,7 +301,7 @@ Used by the routines at <a href="27136.html">27136</a> and <a href="27308.html">
 <tr>
 <td class="address-1"><span id="27251"></span>27251</td>
 <td class="instruction">LD L,34</td>
-<td class="comment-1" rowspan="1"><span class="register">L</span>=34.</td>
+<td class="comment-1" rowspan="1">Update <span class="register">HL</span> to point to <a href="30754.html">Speed</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="27253"></span>27253</td>
