--- a/dec/asm/27070.html
+++ b/dec/asm/27070.html
@@ -46,12 +46,11 @@ Next: <a href="27122.html">27122</a>
 <tr>
 <td class="address-2"><span id="27070"></span>27070</td>
 <td class="instruction">LD DE,2</td>
-<td class="comment-1" rowspan="1"><span class="register">DE</span>=0002.</td>
+<td class="comment-1" rowspan="2"><span class="register">HL</span>+=0002.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="27073"></span>27073</td>
 <td class="instruction">ADD HL,DE</td>
-<td class="comment-1" rowspan="1"><span class="register">HL</span>+=<span class="register">DE</span>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="27074"></span>27074</td>
