--- a/dec/asm/29682.html
+++ b/dec/asm/29682.html
@@ -44,6 +44,19 @@ Next: <a href="29726.html">29726</a>
 Used by the routine at <a href="26907.html">ColouriseSprite</a>.
 </div>
 </div>
+<table class="input">
+<tr class="asm-input-header">
+<th colspan="2">Input</th>
+</tr>
+<tr>
+<td class="register">B</td>
+<td class="register-desc"></td>
+</tr>
+<tr>
+<td class="register">C</td>
+<td class="register-desc"></td>
+</tr>
+</table>
 </td>
 </tr>
 <tr>
@@ -187,12 +200,11 @@ Used by the routine at <a href="26907.html">ColouriseSprite</a>.
 <tr>
 <td class="address-1"><span id="29720"></span>29720</td>
 <td class="instruction">LD A,E</td>
-<td class="comment-1" rowspan="1"><span class="register">A</span>=<span class="register">E'</span>.</td>
+<td class="comment-1" rowspan="2">Write <span class="register">E'</span> to *<a href="30757.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29721"></span>29721</td>
 <td class="instruction">LD (30757),A</td>
-<td class="comment-1" rowspan="1">Write <span class="register">A</span> to *<a href="30757.html">SpriteState</a>.</td>
 </tr>
 <tr>
 <td class="address-1"><span id="29724"></span>29724</td>
